# Boa

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  main  main.cpp
Discordbot/: main.py  to_run.boa
Extern Libs/: glad.c
Extern Libs/ImGui/: imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h
Extern Libs/cpptk/base/: cpptkbase.cc
SyntaxHighlighter/boa-lang/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
SyntaxHighlighter/boa-lang/syntaxes/: boa.tmLanguage.json
Testing/: AsciiArt.boa  Async.boa  Coordinates.txt  Discord.boa  MyBot.boa  REPL.boa  Temp.txt  Test.boa  TruthMachine.boa  lolapalooza.db  main.boa  recipes.db  stdlib.boa  time_trial.boa  time_trial.py
Testing/Boa Libraries/: math.boa
Testing/Boa Libs/: json.boa  math.boa
Testing/Socket/: Client.boa  Server.boa
Testing/Wordle Boa/: wordle.boa  words.txt
docs/: basics.html  conditional_statements.html  control_flow.html  index.html  main.js  style.css
includes/: Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  RunInterface.cpp  RunInterface.h  Token.cpp  Token.h  Value.cpp  Value.h
includes/Context/: Context.cpp  Context.h
includes/Errors/: Error.cpp  Error.h  RuntimeError.cpp  RuntimeError.h
includes/Interpreter/: Interpreter.cpp  Interpreter.h
includes/Lexer/: Lexer.cpp  Lexer.h
includes/Modules/GUI/: GUI.cpp  GUI.h  GUIFunction.cpp  GUIFunction.h
includes/Modules/Json/: Json.cpp  Json.h  JsonFunction.cpp  JsonFunction.h
includes/Modules/Random/: Random.cpp  Random.h  RandomFunction.cpp  RandomFunction.h
includes/Modules/Requests/: Requests.cpp  Requests.h  RequestsFunction.cpp  RequestsFunction.h
includes/Modules/SQLite/: SQLite3.cpp  SQLite3.h  SQLite3Function.cpp  SQLite3Function.h
includes/Modules/Time/: Time.cpp  Time.h  TimeFunction.cpp  TimeFunction.h
includes/Nodes/: BinaryOperationNode.cpp  BinaryOperationNode.h  CallNode.cpp  CallNode.h  ForNode.cpp  ForNode.h  FuncDefNode.cpp  FuncDefNode.h  IfNode.cpp  IfNode.h  IndexNode.cpp  IndexNode.h  IterateNode.h  ListNode.cpp  ListNode.h  MapNode.cpp  MapNode.h  NestedIdentifierAccessNode.cpp  NestedIdentifierAccessNode.h  Node.cpp  Node.h  NumberNode.cpp  NumberNode.h  StringNode.h  UnaryOperationNode.cpp  UnaryOperationNode.h  VarAccessNode.cpp  VarAccessNode.h  VarAssignNode.cpp  VarAssignNode.h  VarOperationNode.cpp  VarOperationNode.h  WhileNode.cpp  WhileNode.h
includes/Nodes/Branching Statements/: BreakNode.h  ContinueNode.cpp  ContinueNode.h  ReturnNode.cpp  ReturnNode.h
includes/Nodes/Control Flow/: ClassDefNode.cpp  ClassDefNode.h  EitherNode.cpp  EitherNode.h  ForNode.cpp  ForNode.h  FuncDefNode.cpp  FuncDefNode.h  IfNode.cpp  IfNode.h  IterateNode.cpp  IterateNode.h  TryCatchNode.cpp  TryCatchNode.h  WhileNode.cpp  WhileNode.h
includes/Nodes/Statements/: AwaitNode.cpp  AwaitNode.h  ImportNode.cpp  ImportNode.h
includes/Nodes/Value Nodes/: ListNode.cpp  ListNode.h  MapNode.cpp  MapNode.h  NumberNode.cpp  NumberNode.h  StringNode.cpp  StringNode.h
includes/Parser/: ParseResult.cpp  ParseResult.h  Parser.cpp  Parser.h
includes/RuntimeResult/: RuntimeResult.cpp  RuntimeResult.h
includes/SymbolTable/: SymbolTable.cpp  SymbolTable.h
includes/Token/: BaseToken.cpp  BaseToken.h  Token.cpp  Token.h  TokenType.h
includes/Values/: BaseFunction.cpp  BaseFunction.h  BaseValue.cpp  BaseValue.h  Constants.h  Function.cpp  Function.h  List.cpp  List.h  Map.cpp  Map.h  Number.cpp  Number.h  String.cpp  String.h  Value.cpp  Value.h
(+86 files in other folders)
